[package]
name = "protoc-rust"
version = "0.2.0-beta.1"
authors = ["Igor Nikitin <rabbitinspace@icloud.com>"]
edition = "2018"

description = "'protoc' plugin based on 'prost' and 'tonic'."
repository = "https://github.com/satelit-project/protoc-rust"
keywords = ["protoc", "protobuf", "grpc"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
license = "MIT"
license-file = "LICENSE"

[[bin]]
name = "protoc-gen-rust"
path = "src/main.rs"

[dependencies]
prost-build = { git = "https://github.com/satelit-project/prost.git", branch = "satelit" }
tonic-build = { git = "https://github.com/satelit-project/tonic.git", branch = "satelit" }

[patch.crates-io]
prost = { git = "https://github.com/satelit-project/prost.git", branch = "satelit" }
prost-build = { git = "https://github.com/satelit-project/prost.git", branch = "satelit" }
prost-types = { git = "https://github.com/satelit-project/prost.git", branch = "satelit" }
prost-derive = { git = "https://github.com/satelit-project/prost.git", branch = "satelit" }
